# WatchOut

./: .gitignore  README.md
.github/workflows/: master_electricityoutagesscrapping.yml  master_electricityoutragesscraping.yml  master_watchoutapi.yml  master_watchoutmicroservice.yml
Client/: remove_after_setup.txt
Client/watchout/: App.tsx  app.json  babel.config.js  cesconfig.jsonc  config.ts  env.d.ts  eslint.config.js  google-services.json  package-lock.json  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
Client/watchout-web/: index.html  package-lock.json  package.json  vite.config.ts
Microservice/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  commands.txt  function_app.py  logging_config.py  main.py  prompts.py  pyproject.toml  requirements.txt  run_server.bat  scrapper.py  serializers.py
Microservice/Microservice/: asgi.py  settings.py  urls.py  wsgi.py
Microservice/learn/: main.py
Microservice/scrapers/: __init__.py  energa.py  energa2.py  energa_new.py  imgw.py  logging_config.py  t_input  t_new  t_old  tauron.py  tauron_old.py
Microservice/scrapers/parser/: models.py  parser.py  prompts.py
Microservice/scrapers/parsers/: __init__.py  models.py  parser.py  prompts.py
Microservice/scrapers/source/: tauron_powiat_map.json  tauron_voivodeship_map.json  tauron_voivodeship_powiat_map.json  teryt_id_powiat_name_map.json
Microservice/watchout/: apps.py  authentication.py  urls.py  views.py
Server/: README.md  pom.xml  run.ps1
Server/wiki/: clustering_algoritm.md  reputation_recalculation_formula.md
(+346 files in other folders)
