[project]
name = "watchout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-eventhub>=5.15.0",
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "lxml>=6.0.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
