[project]
name = "watchout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-functions>=1.24.0",
    "dotenv>=0.9.9",
    "json-repair>=0.54.2",
    "langchain-groq>=1.1.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
